--- a/Dad Jokes Online/Base.lproj/Main.storyboard
+++ b/Dad Jokes Online/Base.lproj/Main.storyboard
@@ -25,23 +25,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="jiE-F1-svJ">
-                                <rect key="frame" x="0.0" y="114" width="0.0" height="262"/>
+                                <rect key="frame" x="12" y="114" width="351" height="312"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Setup" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kbb-S0-yhS">
-                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="150"/>
-                                        <color key="backgroundColor" red="0.84180201908090235" green="0.98132258650000004" blue="0.8232787936467354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="351" height="150"/>
+                                        <color key="backgroundColor" red="0.86530377538071068" green="0.86530377538071068" blue="0.86530377538071068" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="150" id="QPY-NO-FoO"/>
+                                            <constraint firstAttribute="height" constant="150" id="Sbg-Ge-6FH"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Punchline" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rq2-1b-A0k">
-                                        <rect key="frame" x="0.0" y="162" width="0.0" height="100"/>
-                                        <color key="backgroundColor" red="0.84180201908090235" green="0.98132258650000004" blue="0.8232787936467354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rq2-1b-A0k">
+                                        <rect key="frame" x="0.0" y="162" width="351" height="150"/>
+                                        <color key="backgroundColor" red="0.86530377540000003" green="0.86530377540000003" blue="0.86530377540000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="TGD-gg-bLL"/>
+                                            <constraint firstAttribute="height" constant="150" id="h2X-wy-Wnn"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                         <nil key="textColor"/>
@@ -50,20 +50,23 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="LLj-9D-wgu">
-                                <rect key="frame" x="0.0" y="565" width="0.0" height="102"/>
+                                <rect key="frame" x="0.0" y="565" width="375" height="102"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aHS-Me-gTs">
-                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                         <color key="backgroundColor" red="0.45009386540000001" green="0.98132258650000004" blue="0.4743030667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="35Z-cN-bm1"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="20"/>
                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="show joke/show another joke"/>
+                                        <state key="normal" title="show joke."/>
+                                        <connections>
+                                            <action selector="didPressJoke" destination="BYZ-38-t0r" eventType="touchUpInside" id="yUj-sN-b7g"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zMJ-0q-bOx">
-                                        <rect key="frame" x="0.0" y="52" width="0.0" height="50"/>
+                                        <rect key="frame" x="0.0" y="52" width="375" height="50"/>
                                         <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="WNx-7F-Q5A"/>
